fix starfields on mobile and resize

--- a/src/style.css
+++ b/src/style.css
@@ -67,8 +67,6 @@ body[data-starry=true] .mantine-SegmentedControl-indicator {
 }
 
 .pageBackground {
-    width: 100vw;
-    height: 100vh;
     position: fixed;
     z-index: -999;
     left: 0;
